--- a/src/styles.css
+++ b/src/styles.css
@@ -2231,6 +2231,10 @@ body {
     line-height: 1.4em;
   }
 
+  .downArrowContainer {
+    bottom: 100px;
+  }
+
   .mobile-menu .mobileMenuLinks .linksWrapper {
     text-align: center;
   }
@@ -2292,6 +2296,8 @@ body {
 
   .fixed-header {
     height: 50px;
+    left: 20px;
+    width: calc(100vw - 20px*2);
   }
   .fixed-header.lightMobile {
     color: #fff;
@@ -2554,6 +2560,8 @@ body {
   .slides_wrapper .slides_inner .slide.slideTemplate-fountainPen .textSection {
     padding-right: 0;
     padding-top: calc(100vw * 0.5625);
+    padding-left: 0;
+    width: calc(100vw - 20px*2);
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-patio {
     background-color: #000;
@@ -2571,6 +2579,8 @@ body {
     height: 100vh;
     width: 100vw;
     flex-basis: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-amenities .amenities .amenities__details > h2 {
     width: auto;
@@ -2589,6 +2599,7 @@ body {
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-views .views_section__top {
     height: calc(100vh - 50vh - 50px);
+    padding-left: 20px;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-views .views_section__top > p {
     font-size: 12px;
@@ -2659,8 +2670,9 @@ body {
     justify-content: center;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-residencePenthouseDetail .residencePenthouseDetail__details {
-    width: calc(100vw - 38px*2);
-    height: 100vh;
+    width: calc(100vw - 20px*2);
+    height: calc(100vh - 50px);
+    margin-top: 50px;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-residencePenthouseDetail .residencePenthouseDetail__image_container {
     width: 100%;
@@ -2681,6 +2693,7 @@ body {
     width: 100vw;
     left: 0;
     flex-direction: column;
+    top: 50px;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-developmentTeam .developmentTeam__button_group {
     flex-direction: column;
@@ -2691,9 +2704,16 @@ body {
     margin-right: 0;
     margin-bottom: 10px;
   }
+  .slides_wrapper .slides_inner .slide.slideTemplate-developmentTeam .developmentTeam__copyright_logo_container {
+    padding: 0 20px;
+  }
+  .slides_wrapper .slides_inner .slide.slideTemplate-developmentTeam .developmentTeam .textGroup {
+    padding-right: 20px;
+  }
   .slides_wrapper .slides_inner .slide.slideTemplate-developmentTeam .developmentTeam .left {
     position: static;
     width: 100vw;
+    padding-left: 20px;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-developmentTeam .developmentTeam .right {
     position: static;
@@ -2707,20 +2727,28 @@ body {
     height: calc(100vh - 50px);
     top: 50px;
     justify-content: flex-start;
+    padding: 0 20px;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-videoDiscover .videoContainer .background-video {
     width: 100vw;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-neighborhoodCommunity .neighborhoodCommunity {
     flex-direction: column;
+    left: 20px;
+    top: 50px;
+    width: calc(100vw - 20px*2);
+    padding-bottom: 20px;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-neighborhoodCommunity .neighborhoodCommunity .left {
     order: 2;
   }
+  .slides_wrapper .slides_inner .slide.slideTemplate-neighborhoodCommunity .neighborhoodCommunity .right {
+    padding: 0;
+  }
   .slides_wrapper .slides_inner .slide.slideTemplate-neighborhoodCommunity .neighborhoodCommunity .right .button_container {
     flex-direction: column;
     align-items: center;
-    padding-bottom: 38px;
+    padding-bottom: 20px;
   }
   .slides_wrapper .slides_inner .slide.slideTemplate-neighborhoodCommunity .neighborhoodCommunity .right .button_container .btn + .btn {
     margin-left: 0;
